--- a/testimonials.html
+++ b/testimonials.html
@@ -113,7 +113,7 @@
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/page-name_bg.jpg"
+          data-src="./img/post-author-bg.jpg"
           alt="bg"
         />
       </div>
@@ -126,8 +126,8 @@
           <div class="section-header">
             <h2>Our Latest Clients</h2>
             <p>
-              Our reputation comes from the artists we work with and the records
-              made in our studios
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro,
+              illo dolore. Doloremque error ratione eveniet!
             </p>
           </div>
         </div>
@@ -182,7 +182,7 @@
                 data-src="img/client-1.jpg"
                 alt="img"
               />
-              <p>Margaret Smith</p>
+              <p>John Doe</p>
             </div>
           </div>
           <div class="tt-slide">
@@ -193,7 +193,7 @@
                 data-src="img/client-2.jpg"
                 alt="img"
               />
-              <p>Bonnie McKee</p>
+              <p>Jane Doe</p>
             </div>
           </div>
           <div class="tt-slide">
@@ -204,7 +204,7 @@
                 data-src="img/client-3.jpg"
                 alt="img"
               />
-              <p>Leland Duncan</p>
+              <p>John Doe</p>
             </div>
           </div>
           <div class="tt-slide">
@@ -215,7 +215,7 @@
                 data-src="img/client-4.jpg"
                 alt="img"
               />
-              <p>Over The Board</p>
+              <p>Jane Doe</p>
             </div>
           </div>
           <div class="tt-slide">
@@ -226,7 +226,7 @@
                 data-src="img/client-5.jpg"
                 alt="img"
               />
-              <p>Robert M. Weiss</p>
+              <p>John Doe</p>
             </div>
           </div>
         </div>
@@ -237,10 +237,9 @@
         class="call-banner white-section v-separator pt-xs-40 pt-md-50 pt-lg-100 pb-xs-40 pb-md-50 pb-lg-100"
       >
         <div class="container">
-          <h2>We Have Recorded More than 1000 artists</h2>
+          <h2>We Have Recorded More than XXX artists</h2>
           <p>
-            Over twenty years of music industry experience in a variety of
-            styles
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, sed!
           </p>
           <a
             href="#bookingPopup"
@@ -293,50 +292,37 @@
               <div class="row" id="js-clientFilter">
                 <div class="col-6 col-md-4 col-lg-3">
                   <ul class="clients-list">
-                    <li class="filter-elem music">Michael Earle</li>
-                    <li class="filter-elem post-roduction">Michael Vazquez</li>
-                    <li class="filter-elem feature-films">Matthew Duncan</li>
-                    <li class="filter-elem music">Rickey Campbell</li>
-                    <li class="filter-elem feature-films">Jonathan Ku</li>
-                    <li class="filter-elem post-roduction">Theresa Ochoa</li>
-                    <li class="filter-elem music">Angela Hunley</li>
+                    <li class="filter-elem music">John Doe</li>
+                    <li class="filter-elem post-roduction">Jane Doe</li>
+                    <li class="filter-elem feature-films">John Doe</li>
+                    <li class="filter-elem music">Jane Doe</li>
                   </ul>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 collapse-clients">
                   <ul class="clients-list">
-                    <li class="filter-elem feature-films">Beverly Pleasants</li>
-                    <li class="filter-elem feature-films">Louis Shay</li>
-                    <li class="filter-elem post-roduction">Stephen Rivers</li>
-                    <li class="filter-elem feature-films">Alan Doody</li>
-                    <li class="filter-elem post-roduction">Betty Cochran</li>
-                    <li class="filter-elem music">Marlene Fowler</li>
-                    <li class="filter-elem music">Lois Olson</li>
+                    <li class="filter-elem feature-films">Jane Doe</li>
+                    <li class="filter-elem feature-films">John Doe</li>
+                    <li class="filter-elem post-roduction">Jane Doe</li>
                   </ul>
                 </div>
                 <div
                   class="col-6 col-md-4 col-lg-3 collapse-clients collapsed-xs"
                 >
                   <ul class="clients-list">
-                    <li class="filter-elem feature-films">Dorothy Riddle</li>
-                    <li class="filter-elem post-roduction">Katie Dunnv</li>
-                    <li class="filter-elem music">Roger Hoehne</li>
-                    <li class="filter-elem post-roduction">Thomas Elliott</li>
-                    <li class="filter-elem music">Bobby Hodge</li>
-                    <li class="filter-elem feature-films">Ashley Greene</li>
-                    <li class="filter-elem post-roduction">Dorothy Shepherd</li>
+                    <li class="filter-elem feature-films">John Doe</li>
+                    <li class="filter-elem post-roduction">Jane Doe</li>
+                    <li class="filter-elem music">John Doe</li>
+                    <li class="filter-elem post-roduction">Jane Doe</li>
                   </ul>
                 </div>
                 <div
                   class="col-6 col-md-4 col-lg-3 collapse-clients collapsed-sm"
                 >
                   <ul class="clients-list">
-                    <li class="filter-elem post-roduction">Theresa Blanding</li>
-                    <li class="filter-elem feature-films">George Norsworthy</li>
-                    <li class="filter-elem music">Nathalie Smith</li>
-                    <li class="filter-elem music">Ben Worrell</li>
-                    <li class="filter-elem post-roduction">Jane Wilcher</li>
-                    <li class="filter-elem music">Pena</li>
-                    <li class="filter-elem feature-films">Orville Thompson</li>
+                    <li class="filter-elem post-roduction">Jane Doe</li>
+                    <li class="filter-elem feature-films">John Doe</li>
+                    <li class="filter-elem music">Jane Doe</li>
+                    <li class="filter-elem music">John Doe</li>
                   </ul>
                 </div>
                 <ul class="tt-pagination pagination_white">
@@ -369,11 +355,12 @@
               <div class="review-block review--dark">
                 <div class="review-content">
                   <p>
-                    My band and I had a great time recording at Judahs Records.
-                    The staff were very friendly, personable and accommodating
-                    to all our requirements. The studio is quite spacious and
-                    well kitted out. Even better, it is used by experienced
-                    professionals who help to get the best out of you.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Exercitationem laudantium asperiores pariatur ut excepturi
+                    facilis ex sapiente in, hic, unde, voluptas quaerat quisquam
+                    tenetur saepe corporis assumenda. Eveniet, architecto alias
+                    expedita quod ut nihil natus similique quisquam officia
+                    nesciunt odio.
                   </p>
                   <svg
                     width="86"
@@ -411,7 +398,7 @@
                     />
                   </div>
                   <div class="review-author__info">
-                    <h4>Laura T. Harrington</h4>
+                    <h4>Jane Doe</h4>
                     <p>Singer / Songwriter</p>
                   </div>
                 </div>
@@ -419,12 +406,12 @@
               <div class="review-block">
                 <div class="review-content">
                   <p>
-                    I wanted to drop you a brief but sincere couple of lines of
-                    thanks for all the hard work you put into making the music &
-                    sound behind Economy Gastronomy such a success. Despite
-                    having a new brief thrown at you seemingly every other week
-                    you behaved always with courtesy and professionalism. And
-                    you really nailed it.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Nihil cumque exercitationem provident praesentium. Magni,
+                    molestias ipsam! Sed nobis ipsam libero nam, accusantium
+                    quod molestiae eveniet nostrum inventore, quos natus omnis
+                    fugiat. Laudantium, temporibus veniam ut esse saepe quod
+                    explicabo quae alias natus expedita possimus reiciendis.
                   </p>
                   <svg
                     width="86"
@@ -462,7 +449,7 @@
                     />
                   </div>
                   <div class="review-author__info">
-                    <h4>Allen R. McKelvey</h4>
+                    <h4>John Doe</h4>
                     <p>Singer / Songwriter</p>
                   </div>
                 </div>
@@ -470,10 +457,11 @@
               <div class="review-block review--dark">
                 <div class="review-content">
                   <p>
-                    I love Judahs Records Recording Studio! Great
-                    state-of-the-art studio full of talented, supportive people.
-                    Excellent location at a good price. I was very happy with
-                    everything... I've already recommended it.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Soluta, porro fugit voluptate quos asperiores atque tenetur
+                    aliquam id earum autem voluptates error ratione
+                    exercitationem harum deleniti sed temporibus laboriosam in
+                    mollitia pariatur! Explicabo, praesentium id!
                   </p>
                   <svg
                     width="86"
@@ -511,7 +499,7 @@
                     />
                   </div>
                   <div class="review-author__info">
-                    <h4>Frances E. Hayes</h4>
+                    <h4>John Doe</h4>
                     <p>Composer, Orchestrator</p>
                   </div>
                 </div>
@@ -521,16 +509,13 @@
               <div class="review-block">
                 <div class="review-content">
                   <p>
-                    My first initial session to record a demo for my publisher
-                    was meant to be a one-off. I was so impressed with the
-                    standard and level of service that I went back to record
-                    songs some of which are on my soon to be released new album
-                    "Bring back the love". Apart from being a seasoned
-                    professional, is also a perfectionist and as such he ensures
-                    that he always gives 100% during the creative process. The
-                    end product/result is always of a high standard and quality.
-                    I highly recommend Judahs Records Records studios as it's
-                    value for money. You WILL NOT be disappointed!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Nisi fugiat maiores beatae tempora quisquam sequi
+                    repellendus odit impedit corporis dolorum itaque nemo
+                    laborum possimus ad exercitationem explicabo incidunt,
+                    obcaecati recusandae nihil suscipit. Quas fugiat dolor
+                    ipsum, libero maxime vero. Hic omnis iure adipisci fuga
+                    dolorum!
                   </p>
                   <svg
                     width="86"
@@ -568,7 +553,7 @@
                     />
                   </div>
                   <div class="review-author__info">
-                    <h4>Scotty L. Salazar</h4>
+                    <h4>Jane Doe</h4>
                     <p>Composer</p>
                   </div>
                 </div>
@@ -576,10 +561,7 @@
               <div class="review-block review--dark">
                 <div class="review-content">
                   <p>
-                    Thanks a lot for all your help, we would 100% use your
-                    expertise again in future projects. It was the first time we
-                    used a recording studio for a project and now I cant imagine
-                    doing it any other way.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quasi maiores laudantium facilis ut nulla vel eos, ex laboriosam error quis iste modi. Eaque hic deserunt nostrum culpa at consectetur error est laboriosam beatae quam. Quis, soluta natus.
                   </p>
                   <svg
                     width="86"
@@ -617,7 +599,7 @@
                     />
                   </div>
                   <div class="review-author__info">
-                    <h4>Elaine T. Stark</h4>
+                    <h4>John Doe</h4>
                     <p>Series Producer</p>
                   </div>
                 </div>
@@ -625,11 +607,7 @@
               <div class="review-block">
                 <div class="review-content">
                   <p>
-                    I just wanted to say a big thank you for our session the
-                    other day, both Vas and I really enjoyed ourselves and you
-                    were all so welcoming that it was so easy for Vas to
-                    overcome her nerves. It was a pleasure meeting you all and
-                    we'll be sure to come back.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus eum perspiciatis nam ullam incidunt asperiores, nobis porro et quod sunt quisquam corrupti veritatis, quas totam nesciunt in eligendi expedita ipsum!
                   </p>
                   <svg
                     width="86"
@@ -667,7 +645,7 @@
                     />
                   </div>
                   <div class="review-author__info">
-                    <h4>Joseph M. McAdams</h4>
+                    <h4>John Doe</h4>
                     <p>Creative Director</p>
                   </div>
                 </div>
